--- a/mini_project-master/src/main/resources/application.properties
+++ b/mini_project-master/src/main/resources/application.properties
@@ -1,14 +1,16 @@
 spring.profiles.include=oauth
 
-spring.datasource.url=jdbc:mysql://springboot-coffee-database.cls5izrfd1p5.ap-northeast-2.rds.amazonaws.com:3306/coffeecomu
-spring.datasource.username=admin
-spring.datasource.password=spartamini8th
-spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
+spring.datasource.hikari.driver-class-name=org.h2.Driver
+spring.datasource.hikari.jdbc-url=jdbc:h2:./daykeepdb;AUTO_SERVER=TRUE
+spring.datasource.hikari.username=sa
+spring.datasource.hikari.password=
 
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.generate-ddl=true
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
+spring.jpa.hibernate.ddl-auto=update
 
 server.port=8081
 
